# CompanyAgent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  je suis déjà train de build une architecture IA multi.docx  netlify.toml  railway.json
.github/workflows/: ci.yml
backend/python-services/: railway.json  requirements.txt
backend/python-services/app/: config.py  main.py
backend/python-services/tests/: test_orchestrator.py
backend/rust-api/: Cargo.toml  railway.json
backend/rust-api/migrations/: 001_initial.sql
backend/rust-api/src/: config.rs  errors.rs  main.rs
backend/rust-api/src/middleware/: auth.rs  rate_limit.rs
backend/rust-api/src/models/: agent.rs  conversation.rs  mcp_server.rs  mod.rs  skill.rs  task.rs  user.rs
backend/rust-api/src/routes/: agents.rs  auth.rs  conversations.rs  health.rs  mcp_servers.rs  mod.rs  skills.rs  tasks.rs
backend/rust-api/src/utils/: mod.rs
backend/rust-api/tests/: integration_test.rs
database/seeds/: seed.sql
docs/: API.md  DEPLOYMENT.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentCard.tsx  BrandMark.tsx  ChatInterface.tsx  I18nProvider.tsx  Layout.tsx  Providers.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/lib/: api.ts  i18n.ts  types.ts
frontend/src/stores/: agents.ts  auth.ts
infra/: Dockerfile.frontend  Dockerfile.python  Dockerfile.railway-backend  Dockerfile.rust  start-railway-backend.sh
infra/.github/workflows/: ci.yml
(+17 files in other folders)
